<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover" />

    <item
        android:id="@+id/navigation_personas"
        android:icon="@drawable/ic_personas"
        android:title="@string/personas" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>